[CI] Enable c/c++ codecov support
Using the Docker container built for GCC Annotations in GH (#5404), build and run the following tests, then compute code coverage and push to codecov.io.

- test_oai
- test_session_manager

Test Plan

Submitted PR and observed [codecov.io reported results](https://codecov.io/gh/magma/magma/tree/45b981c738c07adf83bf474430358f0d1c69f51b/lte/gateway/c).

Signed-off-by: Scott Harrison Moeller <smoeller@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -750,6 +750,21 @@ jobs:
             docker build -t magma-mme-build -f Dockerfile.ubuntu20.04 ../../../../
             docker run --env BRANCH=$BRANCH --env REVISION=$REVISION -v $MAGMA_ROOT:/magma -i -t magma-mme-build:latest /bin/bash -c 'cd /magma/lte/gateway;make clang_tidy_oai_upload'
 
+  c-cpp-codecov:
+    machine:
+      image: ubuntu-2004:202010-01
+      docker_layer_caching: true
+    environment:
+      MAGMA_ROOT: /home/circleci/project
+    steps:
+      - checkout
+      - run:
+          command: |
+            cd $MAGMA_ROOT/lte/gateway/docker/mme
+            docker build -t magma/c_cpp_build -f Dockerfile.ubuntu20.04 ../../../../
+            ci_env=`bash <(curl -s https://codecov.io/env)`
+            docker run $ci_env -e CI=true -v /home/circleci/project:/magma -v /home/circleci/project/lte/gateway/configs:/etc/magma -i -t magma/c_cpp_build:latest /bin/bash -c "cd /magma/lte/gateway;make coverage;ls -al /tmp/;bash <(curl -s https://codecov.io/bash) -f /build/c/coverage.info"
+
   lte-test:
     machine:
       image: ubuntu-1604:201903-01
@@ -1121,6 +1136,7 @@ workflows:
           <<: *only_master
           requires:
             - lte-integ-test
+      - c-cpp-codecov
 
   feg:
     jobs:
