[orc8r] Clear prod image apt cache
Signed-off-by: Hunter Gatewood <hgatewood@gmail.com>

--- a/orc8r/cloud/docker/controller/Dockerfile
+++ b/orc8r/cloud/docker/controller/Dockerfile
@@ -85,7 +85,8 @@ RUN apt-get update && apt-get install -y \
   openssl \
   supervisor \
   unzip \
-  wget
+  wget \
+&& rm -rf /var/lib/apt/lists/*
 
 # Swagger UI
 # See: https://github.com/swagger-api/swagger-ui
