--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -300,9 +300,8 @@ commands:
             cd ${MAGMA_ROOT}/circleci
             echo $MAGMA_NODE_PKEY | base64 -d - > ci_node.pem
             chmod 0400 ci_node.pem
-            echo $MAGMA_API_CERT | base64 -d - > ci_operator.pfx
-            openssl pkcs12 -in ci_operator.pfx -nocerts -out ci_operator.key.pem -nodes -passin pass:
-            openssl pkcs12 -in ci_operator.pfx -nokeys -out ci_operator.pem -passin pass:
+            echo $CI_OPERATOR_KEY | base64 -d - > ci_operator.key.pem
+            echo $CI_OPERATOR | base64 -d - > ci_operator.pem
 
             echo $MAGMA_ROOTCA | base64 -d - > rootCA.pem
             echo $MAGMA_CONTROL_PROXY | base64 -d - > control_proxy.yml
