Following PR adds upgrade prechecks to the deployer tool. Upgrade prechecks includes - Checks if terraform state exists - Checks if deployed EKS version <= EKS version specified in values - Checks if deployed RDS version <= DB instance version specified in values - Checks if AWSServiceRoleForAmazonElasticsearchService already exists
Signed-off-by: Karthik Subraveti <ksubraveti@fb.com>

--- a/orc8r/cloud/deploy/orc8r_deployer/docker/Dockerfile
+++ b/orc8r/cloud/deploy/orc8r_deployer/docker/Dockerfile
@@ -61,6 +61,7 @@ RUN pip3 install .
 # in the deployment directory even when container is removed
 ENV AWS_CONFIG_FILE=/root/project/.aws/config
 ENV AWS_SHARED_CREDENTIALS_FILE=/root/project/.aws/credentials
+ENV AWS_DEFAULT_OUTPUT=json
 
 WORKDIR /root/project
 CMD ["/bin/bash"]
