--- a/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/infra/tasks/main.yml
+++ b/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/infra/tasks/main.yml
@@ -2,14 +2,21 @@
   ansible.builtin.command: "orcl configure check -c infra"
   register: result
   failed_when: result.rc != 0
-  tags: install_precheck
+  tags:
+    - install_precheck
+    - upgrade_precheck
 
 - name: Open configuration file
   shell: "cat {{config_dir}}/infra.tfvars.json"
   register: result
-  tags: install_precheck
+  tags:
+    - install_precheck
+    - upgrade_precheck
 
 - name: Set Infra Configs
   set_fact:
     infra_configs: "{{ result.stdout | from_json }}"
-  tags: install_precheck
+  tags:
+    - install_precheck
+    - upgrade_precheck
+
