--- a/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/platform/tasks/main.yml
+++ b/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/platform/tasks/main.yml
@@ -2,5 +2,21 @@
   ansible.builtin.command: "orcl configure check -c platform"
   register: result
   failed_when: result.rc != 0
-  tags: install_precheck
+  tags:
+    - install_precheck
+    - upgrade_precheck
+
+- name: Open configuration file
+  shell: "cat {{config_dir}}/platform.tfvars.json"
+  register: result
+  tags:
+    - install_precheck
+    - upgrade_precheck
+
+- name: Set platform Configs
+  set_fact:
+    platform_configs: "{{ result.stdout | from_json }}"
+  tags:
+    - install_precheck
+    - upgrade_precheck
 
