--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,10 +3,10 @@ circleci/ @tmdzk @mattymo @119Vik
 
 ci-scripts/ @rdefosse @tmdzk @mattymo @119Vik
 
-*/cloud/ @mpgermano @hcgatewood @karthiksubraveti @andreilee
-.golangci.yml @mpgermano @hcgatewood
+*/cloud/ @magma/orc8r-approvers 
+.golangci.yml @magma/orc8r-approvers
 
-orc8r/ @mpgermano @hcgatewood @emakeev @karthiksubraveti @andreilee
+orc8r/ @magma/orc8r-approvers 
 orc8r/tools/packer/ @tmdzk @mattymo @119Vik
 orc8r/cloud/deploy/bare-metal/ @tmdzk @mattymo @119Vik
 
