--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -12,7 +12,7 @@ orc8r/cloud/deploy/bare-metal/ @tmdzk @mattymo @119Vik
 
 orc8r/gateway/c/ @themarwhal @ardzoht
 
-feg/ @themarwhal @mpgermano @uri200 @emakeev
+feg/ @magma/feg-approvers 
 cwf/ @themarwhal @mpgermano @uri200 @emakeev
 cwf/gateway/Vagrantfile @mattymo @119Vik @tmdzk
 
