Add post deployment verification checks to orcl
Signed-off-by: Karthik Subraveti <ksubraveti@fb.com>

--- a/orc8r/cloud/deploy/orc8r_deployer/docker/Dockerfile
+++ b/orc8r/cloud/deploy/orc8r_deployer/docker/Dockerfile
@@ -12,7 +12,8 @@ RUN apt-get update && \
             wget \
             unzip \
             curl \
-            vim && \
+            vim \
+            jq && \
     apt-get clean -y && \
     apt-get autoclean -y && \
     apt-get autoremove -y && \
