--- a/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/infra/secrets/tasks/main.yml
+++ b/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/infra/secrets/tasks/main.yml
@@ -1,5 +1,13 @@
-- name: Query secrets manager to check if secretsID is already present
+- name: Query secrets manager
   ansible.builtin.shell: aws secretsmanager get-secret-value --secret-id {{ infra_configs.secretsmanager_orc8r_secret | quote }} || /bin/true
   register: result
-  failed_when: '"ResourceNotFoundException" not in result.stderr'
   tags: install_precheck
+
+- name: Verify if secrets already present
+  assert:
+    that: '"ResourceNotFoundException" in result.stderr'
+    fail_msg:
+      - "secret {{ infra_configs.secretsmanager_orc8r_secret}} already present"
+      - "Remove secrets 'aws secretsmanager delete-secret  --force-delete --secret-id {{ infra_configs.secretsmanager_orc8r_secret | quote }}'"
+  tags: install_precheck
+
