--- a/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/services/helm/tasks/main.yml
+++ b/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/services/helm/tasks/main.yml
@@ -41,7 +41,6 @@
   with_items: "{{deployment_module_map[service_configs.orc8r_deployment_type]}}"
   tags: install_precheck
 
-
 - name: Validate if chart versions present match the expected version
   assert:
     that: chart_version_map[item] == exp_chart_version_map[item]
@@ -53,3 +52,15 @@
   ansible.builtin.shell: helm repo remove test
   ignore_errors: yes
   tags: install_precheck
+
+- name: Get list of installed charts
+  ansible.builtin.shell: helm list -o json -n "{{orc8r_namespace}}"
+  register: deployed_chart_info
+  tags: verify_sanity
+
+- name: Verify if charts have been deployed
+  assert:
+    that: item.status == "deployed"
+    fail_msg: "chart {{item.name}} status {{item.status}} not deployed successfully"
+  tags: verify_sanity
+  with_items: "{{deployed_chart_info.stdout}}"
