Add post deployment verification checks to orcl
Signed-off-by: Karthik Subraveti <ksubraveti@fb.com>

--- a/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/infra.yml
+++ b/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/infra.yml
@@ -1,8 +1,9 @@
 # check if configuration contains all required variables
 - hosts: localhost
   roles:
-    - infra
-    - infra/az
-    - infra/dns
-    - infra/secrets
-    - infra/k8s
+    - role: infra
+    - role: infra/az
+    - role: infra/dns
+    - role: infra/secrets
+      tags: secrets
+    - role: infra/k8s
