--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,16 +3,17 @@ circleci/ @tmdzk @mattymo @119Vik
 
 ci-scripts/ @rdefosse @tmdzk @mattymo @119Vik
 
-*/cloud/ @magma/orc8r-approvers 
+*/cloud/ @magma/orc8r-approvers
 .golangci.yml @magma/orc8r-approvers
 
-orc8r/ @magma/orc8r-approvers 
+orc8r/ @magma/orc8r-approvers
 orc8r/tools/packer/ @tmdzk @mattymo @119Vik
 orc8r/cloud/deploy/bare-metal/ @tmdzk @mattymo @119Vik
+orc8r/cloud/deploy/bare-metal-ansible/ @mattymo @119Vik
 
 orc8r/gateway/c/ @themarwhal @ardzoht
 
-feg/ @magma/feg-approvers 
+feg/ @magma/feg-approvers
 cwf/ @themarwhal @mpgermano @uri200 @emakeev
 cwf/gateway/Vagrantfile @mattymo @119Vik @tmdzk
 
