--- a/nms/app/packages/magmalte/package.json
+++ b/nms/app/packages/magmalte/package.json
@@ -49,6 +49,7 @@
     "https": "^1.0.0",
     "lodash": "^4.17.11",
     "mapbox-gl": "^0.53.0",
+    "mariadb": "^2.4.2",
     "material-table": "1.69.0",
     "pg": "^8.5.1",
     "pug": "^3.0.0",
